# slick-api-rs

./: Cargo.toml  Dockerfile  tests.http
.github/workflows/: cloud-run.yml
src/: auth.rs  handlers.rs  main.rs  models.rs
src/data/: repositories.rs  slick_db.rs
src/data/repositories/: audit_detail_repository.rs  audit_summary_repository.rs  group_repository.rs  group_site_repository.rs  registration_code_repository.rs  report_repository.rs  site_repository.rs  site_tread_repository.rs  url_audit_detail_repository.rs
src/models/: registration.rs
