[package]
name = "slick-api"
version = "0.1.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
lapin = "1.1.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "0.2.21", features = ["macros"] }
warp = "0.2.3"
