[package]
name = "slick-api"
version = "0.2.4"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
env_logger = "0.7.1"
getset = "0.1.1"
log = "0.4.8"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "0.2.21", features = ["macros"] }
warp = "0.2.3"
slick-models = { version = "0.9.9", git = "https://github.com/sajuthankappan/slick-models-rs.git" }

[dependencies.wread-data-mongodb]
version = "0.9.0"
features = ["read", "write"]